Keep reversal proof Java 17 compatible